# ESP32-C3

./: .gitignore  CMakeLists.txt  README.md  eim_config.toml  env.lock.json  partitions.csv  sdkconfig.defaults
APP/: README.md  设计框架.md
APP/serial_ota_tool/: README.md  build_exe.ps1  main.py  requirements.txt  run.bat
APP/serial_ota_tool/app/: mainwindow.py
APP/serial_ota_tool/core/: __init__.py  hex_util.py  ota_client.py  serial_io.py  serial_thread.py
APP/serial_ota_tool/ui/: __init__.py  theme.py
APP/test/: test.py
docs/: DEPLOY.md  DEVELOPMENT.md  HARDWARE.md  LED.md  README.md  RELEASE-v1.0.1.md  RELEASE-v1.0.2.md  RELEASE-v1.0.3.md
docs/archive/: README-legacy.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/joystick/: joystick.c  joystick.h  joystick_test.c  joystick_test.h
main/lcd/: font8x8.c  font8x8.h  st7735.c  st7735.h
main/led/: led_blink.c  led_blink.h
main/ota/: device_info.c  device_info.h  ota_boot.c  ota_boot.h  ota_server.c  ota_server.h  wifi_manager.c  wifi_manager.h
scripts/: build-app-exe.ps1  build-v55.ps1  build.ps1  ota-console.ps1  package-project.ps1  setup-env.ps1
tools/ota_console/: index.html
